# ekagine

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: sprt.yaml
binaries/: 4_only_simple_check  5_better_king_eval  6_interruptible_search  7_fix_mate_in_one_white
scripts/: gen_baseline.sh  verify.sh
src/: eval.rs  main.rs  movegen.rs  nnue.rs  position.rs  pv.rs  rescore.rs  search.rs  syzygy.rs  tablebase.rs  tables.rs  time.rs  tt.rs
src/engine_core/: attacks.rs  board.rs  mod.rs  movegen.rs  types.rs  zobrist.rs
tests/: agreement_baseline.txt  agreement_positions.fen  perft.rs  perft_nps_baseline.txt
tuning/: README.md  RESULTS.md  config.json  spsa.py
