[package]
name = "chess_engine"
version = "0.6.0"
edition = "2021"

[dependencies]
chess = "3.2.0"
once_cell = "1.18.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smallvec = "1.15.1"

[build]
target = "aarch64-apple-darwin"

[profile.release]
opt-level = 3
